# TodoAPI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: settings.py
todo_api/config/: settings.py  urls.py
todo_api/scripts/: auto_configure.py
