[project]
name = "todoapi"
version = "0.1.0"
description = ""
authors = ["Jahongir Qurbonov <qurbonovjahongir17@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0.4",
    "python-dotenv>=1.0.1",
    "djangorestframework>=3.14.0",
    "dj-rest-auth>=4.0.1",
    "django-allauth>=0.54.0",
    "django-cors-headers>=4.0.0",
    "drf-yasg>=1.21.5",
    "django-extensions>=3.2.3",
    "djangorestframework-simplejwt>=5.3.1",
    "django-ranged-fileresponse>=0.1.2",
    "whitenoise>=6.4.0",
]
